--- a/canopy.yml
+++ b/canopy.yml
@@ -1,9 +1,12 @@
 collection:
   # - https://api.dc.library.northwestern.edu/api/v2/collections/f2fc1bd8-c37f-4486-b28a-509f0e0362e1?as=iiif
+manifest: 
+  - https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif
 metadata:
   - Department
 featured:
   # - https://api.dc.library.northwestern.edu/api/v2/works/b167268b-abce-4530-8526-2a405a50b415?as=iiif
+    - https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif
 search:
   results:
     work:
